--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
 
-* {
+/* * {
   background-color: paleturquoise;
-}
+} */
