--- a/style.css
+++ b/style.css
@@ -1,30 +1,51 @@
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
 
-* {
-  background-color: none;
-}
 body {
-  height: 100%;
   margin: 0;
 }
 
 #thumbnail-container {
   height: 100px;
   width: 100px;
-  padding: 10px;
   z-index: 1;
   position: fixed;
   display: flex;
-  justify-content: space-around;
 }
 #main-image-container {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-#left-click {
-  position: relative;
+
+#next {
+  position: absolute;
+  top: 50vh;
+  right: 5vw;
 }
-#right-clikc {
-  position: relative;
+
+#previous {
+  position: absolute;
+  top: 50vh;
+  left: 5vw;
+}
+
+button {
+  border-radius: 12px;
+}
+button:hover {
+  cursor: pointer;
+}
+
+@media (max-width: 400px) {
+  #main-image-container {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    object-fit: cover;
+  }
+  #thumbnail-container {
+    bottom: 1px;
+    height: 50px;
+    width: 50px;
+  }
 }
