--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@ body {
   position: fixed;
   display: flex;
 }
-#main-image-container {
+#main-image-container img {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   object-fit: cover;
+  overflow: hidden;
 }
 
 #next {
@@ -44,8 +45,26 @@ button:hover {
     object-fit: cover;
   }
   #thumbnail-container {
-    bottom: 1px;
+    bottom: 22px;
     height: 50px;
     width: 50px;
+  }
+}
+@media (min-width: 420px) {
+  #main-image-container {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    object-fit: cover;
+  }
+  #thumbnail-container {
+    height: 70px;
+    width: 70px;
+  }
+}
+@media (min-width: 500px) {
+  #thumbnail-container {
+    height: 100px;
+    width: 100px;
   }
 }
